--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">WeatherAppAndroidStudio</string>
+    <string name="author">Michael Mena mmena2017@fau.edu Z23446115</string>
 </resources>
